--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^3.1",
+        "spatie/simple-excel": "^3.8",
         "xendit/xendit-php": "2.19.0"
     },
     "require-dev": {
