--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "milon/barcode": "^12.0",
         "spatie/simple-excel": "^3.8",
         "xendit/xendit-php": "2.19.0"
     },
